[project]
name = "comfyui_prompt_gallery"
description = "Quick and easy UI to use styles, characters, etc. or build entire random prompts via image collections."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Kinglord/ComfyUI_Prompt_Gallery"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kinglord"
DisplayName = "ComfyUI_Prompt_Gallery"
Icon = ""
